fix section width on mobile screen

--- a/src/styles/sass/partials/contacts.scss
+++ b/src/styles/sass/partials/contacts.scss
@@ -5,6 +5,7 @@
     font-weight: 100;
     text-transform: uppercase;
     color: $color-white;
+    overflow-x: hidden;
     &-box{
         margin: 50px 0;
         .contacts__heading{
@@ -24,7 +25,7 @@
             margin-right: 20px;
         }
         iframe{
-            width: 440px;
+            width: 100%;
             height: 291px;
             frameborder: 0;
             border: 5px double $color-white;
